Fix spacing

--- a/src/app/components/ctf/ctf-game/ctf-game.css
+++ b/src/app/components/ctf/ctf-game/ctf-game.css
@@ -88,6 +88,11 @@
   white-space: pre;
 }
 
+.whitespace {
+  pointer-events: none;
+  user-select: none;
+}
+
 .token {
   cursor: pointer;
   transition: background 0.1s;
